# travel-buddy

./: .gitignore  README.md
.kiro/specs/travel-buddy-platform/: design.md  requirement.md  tasks.md
backend/: pyproject.toml  requirements.txt
backend/lambdas/agent/: handler.py
backend/lambdas/briefing/: handler.py
backend/lambdas/chat/: handler.py
backend/lambdas/document/: handler.py
backend/lambdas/document_processor/: handler.py
backend/lambdas/trip/: handler.py
backend/shared/: __init__.py  config.py  dynamo.py  embeddings.py  models.py
backend/tests/: test_document_processor.py  test_shared.py
infra/: package-lock.json  package.json
infra/lib/: api-stack.ts  auth-stack.ts  storage-stack.ts
