[project]
name = "travel-buddy-backend"
version = "0.1.0"
description = "Travel Buddy backend — Python Lambda functions"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.35.0",
    "pydantic>=2.9.0",
    "ulid-py>=1.1.0",
]

[project.optional-dependencies]
agent = [
    "langgraph>=0.2.0",
    "langchain-aws>=0.2.0",
    "pinecone-client>=5.0.0",
    "firecrawl-py>=1.0.0",
    "tavily-python>=0.5.0",
    "googlemaps>=4.10.0",
    "requests>=2.32.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "moto[dynamodb,s3]>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
